--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ ga('send', 'pageview');*/
 </body>
 
 <footer style="text-align: center;">
-    <a href="http://www.theproofistrivial.com/">French translation of The Proof Is Trivial!</a>
+    French translation of <a href="http://www.theproofistrivial.com/">"The Proof Is Trivial!"</a> made by <a href="http://github.com/jglrxavpok">jglrxavpok</a>
 </footer>
 </html>
 
