Adjectives must be plural in the second part

--- a/index.html
+++ b/index.html
@@ -21,59 +21,59 @@ var intros = [
 ];
 
 var adjectives = [
-    "abélien",
-    "associatif",
-    "calculable",
-    "avec une mesure de Lebesgue",
-    "demi-décidable",
-    "simple",
-    "combinatoire",
-    "conversant les structures",
-    "diagonalisable",
-    "inversible",
-    "orientable",
-    "dérivable 2-fois",
-    "dérivable 3-fois",
-    "dénombrable",
-    "premier",
-    "complet",
-    "continu",
-    "trivial",
-    "3-connexe",
-    "biparti",
-    "planaire",
-    "fini",
-    "non-déterministe",
-    "alternatif",
-    "convexe",
-    "non-décidable",
-    "dièdre",
-    "algébrique",
-    "rationnel",
-    "régulier",
-    "Noetherian",
-    "Cauchy",
-    "ouvert",
-    "fermé",
-    "compact",
-    "ouvert-fermé",
-    "topologie sans points",
-    "parfait",
-    "non-dégénéré",
-    "dégénéré",
-    "antisymétrique",
-    "sesquilinéaire",
-    "fondamental",
-    "friable",
-    "connexe",
-    "simplexe",
-    "universel",
-    "glouton",
-    "normal",
-    "total",
-    "inversible à gauche",
-    "exact",
-    "vide",
+    ["abélien"],
+    ["associatif"],
+    ["calculable"],
+    ["avec une mesure de Lebesgue"],
+    ["demi-décidable"],
+    ["simple"],
+    ["combinatoire"],
+    ["conversant les structures", "conversant les structures"], // empêche le programme de rajouter 'es' à la fin
+    ["diagonalisable"],
+    ["inversible"],
+    ["orientable"],
+    ["dérivable 2-fois"],
+    ["dérivable 3-fois"],
+    ["dénombrable"],
+    ["premier"],
+    ["complet"],
+    ["continu"],
+    ["trivial"],
+    ["3-connexe"],
+    ["biparti"],
+    ["planaire"],
+    ["fini"],
+    ["non-déterministe"],
+    ["alternatif"],
+    ["convexe"],
+    ["non-décidable"],
+    ["dièdre"],
+    ["algébrique"],
+    ["rationnel"],
+    ["régulier"],
+    ["Noethérien"],
+    ["Cauchy"],
+    ["ouvert"],
+    ["fermé"],
+    ["compact"],
+    ["ouvert-fermé"],
+    ["topologie sans points"],
+    ["parfait"],
+    ["non-dégénéré"],
+    ["dégénéré"],
+    ["antisymétrique"],
+    ["sesquilinéaire"],
+    ["fondamental"],
+    ["friable"],
+    ["connexe"],
+    ["simplexe"],
+    ["universel"],
+    ["glouton"],
+    ["normal"],
+    ["total"],
+    ["inversible à gauche"],
+    ["exact"],
+    ["vide"],
 ];
 
 /*
@@ -171,10 +171,10 @@ var introSuffix = "un";
 // Inversion des adjectifs et des noms par rapport à l'anglais
 writeLine(40, "La preuve est triviale! " + randomFromList(intros) + introSuffix);
 writeLine(70, randomFromList(setNouns)[0]);
-writeLine(70, firstAdjective);
+writeLine(70, firstAdjective[0]);
 writeLine(40, "dont les éléments sont des ");
 writeLine(70, plural(randomFromList(allNouns)));
-writeLine(70, randomFromList(adjectives)+"s"+"!"); // Les adjectifs en Français s'accordent
+writeLine(70, plural(randomFromList(adjectives))+"!"); // Les adjectifs en Français s'accordent
 
 
 // Google Analytics
